RESOLVED FIXED212615
Fix thread-safety issue in [WKProcessAssertionBackgroundTaskManager _handleBackgroundTaskExpiration]
https://bugs.webkit.org/show_bug.cgi?id=212615
Summary Fix thread-safety issue in [WKProcessAssertionBackgroundTaskManager _handleBa...
Chris Dumez
Reported 2020-06-01 15:06:40 PDT
Fix thread-safety issue in [WKProcessAssertionBackgroundTaskManager _handleBackgroundTaskExpiration].
Attachments
Patch (3.44 KB, patch)
2020-06-01 15:12 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-06-01 15:06:53 PDT
Chris Dumez
Comment 2 2020-06-01 15:12:23 PDT
Geoffrey Garen
Comment 3 2020-06-01 15:23:08 PDT
Comment on attachment 400763 [details] Patch r=me
EWS
Comment 4 2020-06-01 17:08:56 PDT
Committed r262399: <https://trac.webkit.org/changeset/262399> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400763 [details].
Note You need to log in before you can comment on or make changes to this bug.